--- a/day 18/day18.ipynb
+++ b/day 18/day18.ipynb
@@ -2,40 +2,50 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'headers' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[3]\u001b[39m\u001b[32m, line 7\u001b[39m\n\u001b[32m      3\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mbs4\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m BeautifulSoup\n\u001b[32m      4\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mnumpy\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mnp\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m7\u001b[39m headers={\u001b[33m'\u001b[39m\u001b[33mUser-Agent\u001b[39m\u001b[33m'\u001b[39m:\u001b[33m'\u001b[39m\u001b[33mMozilla/5.0 (Windows NT 6.3; Win 64 ; x64) Apple WeKit /537.36(KHTML , like Gecko) Chrome/80.0.3987.162 Safari/537.36\u001b[39m\u001b[33m'\u001b[39m} -requests.get(\u001b[33m'\u001b[39m\u001b[33murl\u001b[39m\u001b[33m'\u001b[39m,headers=\u001b[43mheaders\u001b[49m).text\n",
-      "\u001b[31mNameError\u001b[39m: name 'headers' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import requests\n",
     "from bs4 import BeautifulSoup\n",
     "import numpy as np\n",
     "\n",
+    "# Define the headers to simulate a browser request\n",
+    "headers = {'User-Agent': 'Mozilla/5.0 (Windows NT 6.3; Win 64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/80.0.3987.162 Safari/537.36'}\n",
     "\n",
-    "headers={'User-Agent':'Mozilla/5.0 (Windows NT 6.3; Win 64 ; x64) Apple WeKit /537.36(KHTML , like Gecko) Chrome/80.0.3987.162 Safari/537.36'} -requests.get('url',headers=headers).text\n"
+    "# Replace 'url' with the actual URL you want to scrape\n",
+    "url = 'https://www.ambitionbox.com/list-of-companies?page=1'  # Use a valid URL here\n",
+    "response = requests.get(url, headers=headers)\n",
+    "\n",
+    "# Check if the request was successful (status code 200)\n",
+    "if response.status_code == 200:\n",
+    "    # Parse the page with BeautifulSoup\n",
+    "    soup = BeautifulSoup(response.text, 'html.parser')\n",
+    "    print(soup.prettify())  # Print the parsed HTML\n",
+    "else:\n",
+    "    print(f\"Failed to retrieve the page. Status code: {response.status_code}\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'soup' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[2]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[43msoup\u001b[49m.find_all(\u001b[33m'\u001b[39m\u001b[33mh1\u001b[39m\u001b[33m'\u001b[39m).text\n",
+      "\u001b[31mNameError\u001b[39m: name 'soup' is not defined"
+     ]
+    }
+   ],
    "source": [
-    "\n",
-    "\n",
-    "webpage=requests.get('https://www.ambitionbox.com/list-of-companies?page=1').text\n"
+    "soup.find_all('h1').text\n"
    ]
   },
   {
@@ -43,7 +53,32 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "for i in soup.find_all('h2'):\n",
+    "    print(i.text.strip())\n",
+    "   \n",
+    "   \n",
+    "soup.find_all('p', class_='rating')\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "soup.find_all('a', class_='review-count')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "company=soup.find_all('div',class_='company-content-wrapper')"
+   ]
   }
  ],
  "metadata": {
